<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/_102"
        android:background="@drawable/blue_button"
        android:layout_marginBottom="240dp"
        android:textColor="#ffffff"
        android:id="@+id/bt_number_1"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/_112"
        android:background="@drawable/blue_button"
        android:layout_marginBottom="170dp"
        android:textColor="#ffffff"
        android:id="@+id/bt_number_2"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/_100"
        android:background="@drawable/blue_button"
        android:layout_marginBottom="100dp"
        android:textColor="#ffffff"
        android:id="@+id/bt_number_3"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/_181"
        android:background="@drawable/blue_button"
        android:layout_marginBottom="30dp"
        android:textColor="#ffffff"
        android:id="@+id/bt_number_4"
        android:textSize="20sp"
        />

</RelativeLayout>