<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="60dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/send_help_sms_to"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:id="@+id/bt_smsHelp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="25dp"
            android:text="@string/call_help_on"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:id="@+id/bt_callHelp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:text="@string/emergency_numbers"
            android:background="@drawable/blue_button"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textColor="#ffffff"
            android:id="@+id/bt_emergencyButton_one"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>