<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/wv_myWebview"
        android:visibility="invisible"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:background="@drawable/blue_button"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/find_cab_taxi_in_my_location"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:id="@+id/bt_ride"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/note_this_feature_requires_a_working_internet_connection"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif-light"
        android:id="@+id/tv_note"
        android:layout_below="@+id/bt_ride" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@drawable/blue_button"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:visibility="invisible"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:text=""
        android:id="@+id/bt_searchCab"
        android:layout_below="@+id/bt_ride" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/emergency_numbers"
        android:background="@drawable/blue_button"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="80dp"
        android:textColor="#ffffff"
        android:id="@+id/bt_emergencyButton" />

</RelativeLayout>